--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,12 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
-            "file": "${workspaceFolder}/index.html"
+            "file": "${workspaceFolder}/index.html",
+            "env": {
+    "messages1":"hello",
+    "messages2":"world"
+
+            }
         }
     ]
 }
