--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^16.3.1",
-    "express": "^4.14.0",
-    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+    "express": "^4.18.2",
+    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git",
+    "next-auth": "^4.23.1"
   },
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "engines": {
-    "node": "4.4.5"
+    "node": "8.5.0"
   }
 }
