--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,11 @@
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
             "file": "${workspaceFolder}/index.html",
- 
+            "env": {
+    "messages1":"hello",
+    "messages2":"world"
+
+            }
         }
     ]
 }
